# qt-sandbox

./: .clang-format  .clang-tidy  .gitignore  AnotherPage.cpp  AnotherPage.h  AnotherPage.ui  CMakeLists.txt  ConfigPage.cpp  ConfigPage.h  ConfigSection.cpp  ConfigSection.h  ConfigSetupDialog.cpp  ConfigSetupDialog.h  ConfigSetupDialog.ui  ConfigSetupSettings.h  ConfigTreeItem.cpp  ConfigTreeItem.h  ConfigTreeItemDelegate.cpp  ConfigTreeItemDelegate.h  ConfigTreeModel.cpp  ConfigTreeModel.h  ConfigTreeRootItem.cpp  ConfigTreeRootItem.h  Configuration.h  DnsDataModel.cpp  DnsDataModel.h  DnsItemDelegate.cpp  DnsItemDelegate.h  EthernetSettings.h  EthernetSettingsPage.cpp  EthernetSettingsPage.h  EthernetSettingsPage.ui  ExamplePage.cpp  ExamplePage.h  ExamplePage.ui  Form.cpp  Form.h  Form.ui  InterfaceSettings.h  Ipv4Settings.h  (+15 more)
scripts/: build.sh  run-qtcreator.sh  run-vnc.sh
